[package]
name = "panmath"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A parser for math as people actually write it"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
lazy_static = "1.4.0"
strum = "0.22"
strum_macros = "0.22"
